--- a/index.html
+++ b/index.html
@@ -714,7 +714,18 @@ B|-----------------------------------------------|<br/>
         <h2><a href="#Repertório">🗁</a> / Rock de Galpão - Amigo punk </h2>
         <div class="coluna">
             <code>
-<b>Tom:</b> D<br/>
+<b>Tom:</b> C<br/>
+Am  E/G#  G  D/F#  F  E7<br/>
+<br/>
+Am  Dm  G7  C   E7<br/>
+<br/>
+Em  Am  Em  Am   A7<br/>
+Dm  G7  C  C/B  Am  Bb  E7  Am  A7<br/>
+<br/>
+G|--9-12h14~---12/14-12---------------|<br/>
+D|-----------------------14-12--------|<br/>
+A|-----------------------------15-12--|<br/>
+E|------------------------------------|<br/>
             </code>
         </div>
         <div class="coluna">
@@ -740,12 +751,10 @@ B|-----------------------------------------------|<br/>
         </div>
         <div class="coluna">
             <code>
-<b>Campo harmônico:</b><br/>
-G|-----------------------------------------------|<br/>
-D|-----------------------------------------------|<br/>
-A|-----------------------------------------------|<br/>
-E|-----------------------------------------------|<br/>
-B|-----------------------------------------------|<br/>
+G|----------------------------------------------|<br/>
+D|-----------------------------------------7----|<br/>
+A|------------7-------------------7---5--8------|<br/>
+E|--------5-8-----5-------8---------------------|<br/>
             </code>
         </div>
     </div>
