--- a/index.html
+++ b/index.html
@@ -2,21 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=1024" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <title>Rebob.ini | Repertório</title>
-    
+
     <meta name="description" content="Repertório de músicas Rebob.ini." />
     <meta name="author" content="John Murowaniecki" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
 
-    <!-- 
-    <link rel="shortcut icon" href="impress.js/favicon.png" />
-    <link rel="apple-touch-icon" href="impress.js/apple-touch-icon.png" />
-     -->
+    <link rel="manifest" href="manifest.json">
+
+    <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#131313">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 
      <style>
 html, body {
@@ -26,6 +30,7 @@ html, body {
     font-family: Ubuntu Sans, Ubuntu;
     font-size: 33px;
     color: #afafaf;
+    scroll-behavior: smooth;
 }
 
 code {
@@ -40,12 +45,15 @@ a {
     background-color: #13131342;
     padding: 0.5em;
 }
+
 a:hover {
     background-color: #131313ca;
 }
+
 b {
     color: #cfcfcf;
 }
+
 p {
     clear: both;
     margin-bottom: 1.1em;
@@ -139,7 +147,7 @@ D5(9)  Am7  C9  G  G/F#  D5(9)
 C9  G/B  D5(9)
 
 <b>Refrão:</b>
-<b>D5(9)  Am7  C9  G  G/F#  D5(9)</b>
+D5(9)  Am7  C9  G  G/F#  D5(9)
             <code>
             </code>
 <b>Riff 1:</b>
@@ -148,7 +156,6 @@ D|------------------------------------|
 A|-5-5--3-3-5--3--5--5-5--3-3-5--3-5--|
 E|------------------------------------|
 B|------------------------------------|
-
             </code>
             <code>
 <b>Riff 2:</b>
@@ -157,7 +164,6 @@ D|--------5-7-10-10-7-5---------------|
 A|---5-7----------------7-5-----------|
 E|-5-------------------------7-5------|
 B|------------------------------------|
-
             </code>
             <code>
 <b>Riff 3:</b>
@@ -165,7 +171,7 @@ G|------------------------------------|
 D|------------------------------------|
 A|-3-3-0-3-0------------5--5--3--5----|
 E|-----------3-3-0-3-0----------------|
-B|---------------------<b>(3)</b>------------|
+B|---------------------(3)------------|
             </code>
     </div>
 
