--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@ D  F#  G  Gm
 
 <b>Refrão:</b>
 D  Bm   G    A
-            <code>
+        </code>
+        <code>
 <b>Riff 1:</b>
 G|------------------------------------------|
 D|------------------------------------------|
@@ -281,7 +282,8 @@ D|----------------------------------------------------------------|
 A|----------------------------------------------------------------|
 E|-------------4--4-4-4--4-6--6-6-6--6-6--6-6-4-6-4---------------|
 B|4--4-4--4--4----------------------------------------------------|
-            <code>
+        </code>
+        <code>
 <b>Solo:</b>
 G|-----------------------|
 D|-----------------------|
@@ -320,6 +322,7 @@ D  G  Em7  A
 <b>Solo:</b>
 C  D  C  D
 G  Em7  G  A
+            </code>
             <code>
 <b>Campo harmônico:</b>
 G|----------------7---9----11--------|
@@ -348,14 +351,15 @@ G5  C5  G5  D5  E5  A5  C5
 E5  G5  E5  A5
 
 C5  A5  E5  G5  C5  G5  D5
-            <code>
+        </code> 
+        <code>
 <b>Campo harmônico:</b>
 G|----------------------|------------------|
 D|----------------------|------------------|
 A|--5-----------------2-|--4---------------|  (D, B, F#)
 E|------7--------5------|--2---------------|  (A, G, E)
 B|--------------4-------|------------------|  (C#)
-            </code>
+        </code>
     </div>
 
 
@@ -368,7 +372,8 @@ B|--------------4-------|------------------|  (C#)
 F5  Bb5   Db5   Ab5  Bb5  C5
 
 F5  Bb5   Db5   Ab5  Bb5  C5
-            <code>
+        </code>
+        <code>
 <b>Campo harmônico:</b>
 G|---1-------------------------------------------|
 D|-----2-3---5-6---------------------------------|
@@ -395,7 +400,8 @@ C  G
 
 <b>Solo:</b>
 C5  G5  A5  F5
-            <code>
+        </code>
+        <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
 D|---2-------------5-----------------------------|
@@ -415,6 +421,7 @@ B|-----3-----------------------------------------|
 E  A  B  A
 
 E  A  E  B
+            </code>
             <code>
 <b>Campo harmônico:</b>
 G|-------------------------4-4-4-4-------------------------|
@@ -438,6 +445,7 @@ Bm  G  A
 
 <b>Refrão:</b>
 G  A  D
+            </code>
             <code>
 G|------------------------------------------------|
 D|--<b>0--0</b>----4--4--5------------------------0-2--0-|
@@ -453,7 +461,10 @@ B|------------------------------------------------|
         <h2>John Mellencamp - Hurts So Good </h2>
         <code>
 <b>Tom:</b> D
-            <code>
+A  F#m  E
+
+A  E  F#m  D
+
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
 D|-----------------------------------------------|
@@ -475,6 +486,7 @@ B|-----------------------------------------------|
 D5(9)  D5(9)/F#  G  A4  D5(9)
 
 ( Bm11  G  A5(9) ) 
+            </code>
             <code>
 REFRÃO 1
 G|-----|----------------------------|
@@ -517,7 +529,8 @@ A  C2  A B7  E2
 
 <b>Refrão:</b>
 E  E/G#  A  A/B  E  E/G#  A  A/B
-            <code>
+        </code>
+        <code>
 <b>Riff E7(9):</b>
 G|-------------------------------------|-------------|---|
 D|-------------------------------------|-------------|---|
@@ -536,7 +549,8 @@ B|-------------------------------------|-------------|---|
 
 <b>Intro:</b>
 G5  Em  D5(9)  C5
-
+        </code>
+        <code>
 G----------------------------------------------------|
 D----------------------------------------------------|
 A--------------------------77777777777--5555555555---|
@@ -551,8 +565,8 @@ G----------------------------------------------------|
 D-------------6-9---------------4-7------------------|
 A--7-7-77-7-7-----7--5-5-55-5-5-----5----------------|
 E----------------------------------------------------|
-
-            <code>
+        </code>
+        <code>
 G----------------------------------------------------|
 D--------------------------33---------33----44-77----|
 A-----44-77----44-77----44---44----44----55-------55-|
@@ -577,8 +591,8 @@ Eb5  Ab5
 Bb7  Ab5  Eb5
 
 <b>Refrão:</b>
-Eb  Cm
-            <code>
+Eb  Cm  </code>
+        <code>
 <b>Eb7</b>
 G|---------------------------------|
 D|---------------------------------|
@@ -601,8 +615,8 @@ E|---------------------------------|
 <b>Tom:</b> B
 
 B  E
-F# E
-            <code>
+F# E    </code>
+        <code>
 E|-11--11--11--11--11--11--11--11--12--12--12--12--1--|
 B|---12--12--12--12--12--12--12--12--12--12--12--12---|
 G|----------------------------------------------------|
@@ -644,13 +658,27 @@ Cm7 F7 Ab (Riff 7)
 ( Bb  (Riff 1)  Cm7  (Riff 2) )
 ( Fm7(9)  (Riff 3)    Db  (Riff 8) )
 
-<b>Parte 01</b>
+        </code>
+        <code>
+G|-----------------------------------------------|
+D|------------------5-4-3------------------------|
+A|-------------5-3--------3----------------------|
+E|-4-6-7---7-7--------------6-5------------------|
+B|-----------------------------------------------|
+
+G|-----------------------------------------------|
+D|-------3----------------1--11-1----------------|
+A|--3-3-3-----------1-1-1------------------------|
+E|------(1)--1--1-1------------------------------|
+B|--------------------------------4---3----------|
+
 G|--------------------------------------------|
 D|--------------------------------------------|
 A|---------------10-9-8--8-6-5----------------|
 E|-4-6-7--7-10-8------------------------------|
 B|--------------------------------------------|
-            <code>
+        </code>
+        <code>
 G|--------------------------------------------|
 D|--------------------------------------------|
 A|---------------10-9-8--8-6-5----------------|
@@ -663,6 +691,8 @@ A|-----------10-9-8--8-6-5--------------------|
 E|-7--7-10-8----------------------------------|
 B|--------------------------3-3---------------|
 
+        </code>
+        <code>
 G|--------------------------------------------|
 D|--------------------------------------------|
 A|--------------------------------------------|
@@ -675,6 +705,8 @@ A|--------------------------------------------|
 E|-3--3-3--3-3-3-3--3-3-3-3-------------------|
 B|--------------------------------------------|
 
+        </code>
+        <code>
 G|--------------------------------------------|
 D|--------------------------------------------|
 A|-------8-------6-6-------6------------6-7---|
@@ -702,7 +734,7 @@ A  B  C#m  B  A  B  C#m  B
 A  B  E
 
 <b>Solo:</b> E  A  Em
-            <code>
+        <code>
 G|-----------------------------------------------|
 D|-----------------------------------------------|
 A|-----------------------------------------------|
@@ -720,13 +752,19 @@ B|-----------------------------------------------|
 
 <b>Intro</b> E  C#m
 
+E  (G#)  C#m
+
 E  C#m
 
 E  C#m  A
 
 
+<b>Refrão:</b>
 
-            <code>
+E   
+
+        </code>
+        <code>
 G|----------------------------------------------|
 D|----------------------------------------------|
 A|------------------------11-11--7-7--7-7--7-7--|
@@ -762,7 +800,7 @@ G|--9-12h14~---12/14-12---------------|
 D|-----------------------14-12--------|
 A|-----------------------------15-12--|
 E|------------------------------------|
-            <code>
+        <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
 D|-----------------------------------------------|
@@ -777,8 +815,8 @@ B|-----------------------------------------------|
     <div class="slide" id="De_Falla_-_Popozuda">
         <h2>De Falla - Popozuda </h2>
         <code>
-<b>Tom:</b> D
-            <code>
+<b>Tom:</b> De>
+        <code>
 G|----------------------------------------------|
 D|-----------------------------------------7----|
 A|------------7-------------------7---5--8------|
@@ -791,8 +829,8 @@ E|--------5-8-----5-------8---------------------|
     <div class="slide" id="Vera_-_Borracho_y_louco">
         <h2>Vera - Borracho y louco </h2>
         <code>
-<b>Tom:</b> D
-            <code>
+<b>Tom:</b> De>
+        <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
 D|-----------------------------------------------|
@@ -807,8 +845,8 @@ B|-----------------------------------------------|
     <div class="slide" id="TNT_-_Cachorro_louco">
         <h2>TNT - Cachorro louco </h2>
         <code>
-<b>Tom:</b> D
-            <code>
+<b>Tom:</b> De>
+        <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
 D|-----------------------------------------------|
@@ -823,8 +861,8 @@ B|-----------------------------------------------|
     <div class="slide" id="Steppenwolf_-_born_to_be_wild">
         <h2>Steppenwolf - born to be wild </h2>
         <code>
-<b>Tom:</b> D
-            <code>
+<b>Tom:</b> De>
+        <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
 D|-----------------------------------------------|
@@ -839,8 +877,8 @@ B|-----------------------------------------------|
     <div class="slide" id="Kiss_-_rock_and_roll_all_nite">
         <h2>Kiss - rock and roll all nite </h2>
         <code>
-<b>Tom:</b> D
-            <code>
+<b>Tom:</b> De>
+        <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
 D|-----------------------------------------------|
@@ -856,30 +894,34 @@ B|-----------------------------------------------|
         <h2>Bon Jovi  - It's my life </h2>
         <code>
 <b>Tom:</b> D
-            <code>
+
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
 D|-----------------------------------------------|
 A|-----------------------------------------------|
 E|-----------------------------------------------|
 B|-----------------------------------------------|
-            </code>
+        </code>
     </div>
 
 
 
     <div class="slide" id="AC/DC_-_Highway_to_hell">
-        <h2>AC/DC - Highway to hell </h2>
+        <h2>AC/DC - Highway to hell </h2>
         <code>
-<b>Tom:</b> D
-            <code>
-<b>Campo harmônico:</b>
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-----------------------------------------------|
-            </code>
+<b>Tom:</b> A
+
+D   G  F#
+
+A  D/F#   G  D
+        </code>
+        <code>
+G|-----------------------------|
+D|----------------------5------|
+A|------------------5-7---5----|
+E|----5-5-5-5-5-5-5------------|
+B|-----------------------------|
+        </code>
     </div>
 
 </body>
@@ -905,7 +947,6 @@ B|-----------------------------------------------|
     || Body.mozRequestFullScreen || Body.msRequestFullScreen;
 
     if (requestMethod) {
-        // Native full screen.
         requestMethod.call(Body);
     }
 })()
