--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ html, body {
     font-size: 15px;
     color: #afafaf;
     scroll-behavior: smooth;
+    width: 100%;
+    height: 100%;
 }
 
 a {
@@ -61,8 +63,9 @@ nav a {
     border: 1px solid black;
     padding: 0em 2em 1em;
     background-color: #424242;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    /* overflow-y: auto; */
 
     column-count: 2;
     column-gap: 1em;
@@ -154,8 +157,8 @@ code {
         <div class="btn next"><svg><use href="#icon-expand"/></svg></div>
     </div>
 
-    <div class="slide set-3-cols" id="Repertorio">
-        <h1>Repertório</h1>
+    <div class="slide set-3-cols">
+        <h1><a href="#" id="Repertorio">Repertório</h1>
         <nav>
             <a href="#Jota_Quest_-_Do_Seu_Lado">Jota Quest - Do Seu Lado</a>
             <a href="#Skank_-_Vou_Deixar">Skank - Vou Deixar</a>
@@ -236,14 +239,13 @@ D  F#  G  Gm
 
 <b>Refrão:</b>
 D  Bm   G    A
-        </code>
-        <code>
-<b>Riff 1:</b>
+
 G|------------------------------------------|
 D|------------------------------------------|
 A|-5--5-5--5-----------------------1------1-|
 E|-----------2--2-2--2-3--3-3--3-3----3-3---|
-
+        </code>
+        <code>
 <b>Riff 2:</b>
 G|---------------------------------|
 D|---------------------------------|
@@ -255,7 +257,7 @@ G|----------------------------------------------------|
 D|----------------------------------------------------|
 A|-7-7-----5---7-7-----5------------------------------|
 E|-----5-7---7-----5-7---7-5-5--0-2-3--2-5-5--0-2-3-2-|
-            </code>
+        </code>
     </div>
 
 
@@ -734,13 +736,14 @@ A  B  C#m  B  A  B  C#m  B
 A  B  E
 
 <b>Solo:</b> E  A  Em
+        </code>
         <code>
 G|-----------------------------------------------|
 D|-----------------------------------------------|
 A|-----------------------------------------------|
 E|-----------------------------------------------|
 B|-----------------------------------------------|
-            </code>
+        </code>
     </div>
 
 
@@ -762,7 +765,6 @@ E  C#m  A
 <b>Refrão:</b>
 
 E   
-
         </code>
         <code>
 G|----------------------------------------------|
@@ -800,6 +802,7 @@ G|--9-12h14~---12/14-12---------------|
 D|-----------------------14-12--------|
 A|-----------------------------15-12--|
 E|------------------------------------|
+        </code>
         <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
@@ -807,7 +810,7 @@ D|-----------------------------------------------|
 A|-----------------------------------------------|
 E|-----------------------------------------------|
 B|-----------------------------------------------|
-            </code>
+        </code>
     </div>
 
 
@@ -815,13 +818,14 @@ B|-----------------------------------------------|
     <div class="slide" id="De_Falla_-_Popozuda">
         <h2>De Falla - Popozuda </h2>
         <code>
-<b>Tom:</b> De>
+<b>Tom:</b>
+        </code>
         <code>
 G|----------------------------------------------|
 D|-----------------------------------------7----|
 A|------------7-------------------7---5--8------|
 E|--------5-8-----5-------8---------------------|
-            </code>
+        </code>
     </div>
 
 
@@ -829,7 +833,14 @@ E|--------5-8-----5-------8---------------------|
     <div class="slide" id="Vera_-_Borracho_y_louco">
         <h2>Vera - Borracho y louco </h2>
         <code>
-<b>Tom:</b> De>
+<b>Tom:</b>  Em
+
+Intro: Em  B
+
+       Em  Bm  Am  Em
+
+Em   Bm    Am    Em        B7
+        </code>
         <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
@@ -845,7 +856,8 @@ B|-----------------------------------------------|
     <div class="slide" id="TNT_-_Cachorro_louco">
         <h2>TNT - Cachorro louco </h2>
         <code>
-<b>Tom:</b> De>
+<b>Tom:</b> 
+        </code>
         <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
@@ -861,7 +873,7 @@ B|-----------------------------------------------|
     <div class="slide" id="Steppenwolf_-_born_to_be_wild">
         <h2>Steppenwolf - born to be wild </h2>
         <code>
-<b>Tom:</b> De>
+<b>Tom:</b>
         <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
@@ -875,16 +887,55 @@ B|-----------------------------------------------|
 
 
     <div class="slide" id="Kiss_-_rock_and_roll_all_nite">
-        <h2>Kiss - rock and roll all nite </h2>
+        <h2>Kiss - rock and roll all nite</h2>
         <code>
-<b>Tom:</b> De>
+<b>Tom:</b> Ab
+
+Ab  C#  D#
+        </code>
         <code>
-<b>Campo harmônico:</b>
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-----------------------------------------------|
+verso 1 e 2 
+G|------------------------------|
+D|------------------------------|
+A|-----------4/6-4-3------------|
+E|-4-2-1-2-----------6----------| (4x)
+
+G|------------------------------|
+D|------------------------------|
+A|-4-3-1----6-4-3---------------|
+E|-------4--------6-------------|
+
+        </code>
+        <code>
+
+G|------------------------------|
+D|------------------------------|
+A|-----------4/6-4-3------------|
+E|-4-2-1-2-----------6----------| (2x)
+
+G|------------------------------|
+D|------------------------------|
+A|-4-3-1----6-4-3---------------|
+E|-------4--------6-------------|
+
+        </code>
+        <code>
+
+G|------------------------------|
+D|------------------------------|
+A|-7-7-7-7-7-7-9-9-9-9-9-9\-----|
+E|------------------------------|
+
+
+G|------------------------------|
+D|------------------------------|
+A|--------4-3-1----6-4-3--------|
+E|4~------------4--------6------|
+
+G|------------------------------|
+D|------------------------------|
+A|--------4-3-1----6-4-3--------|
+E|4~------------4--------6--4\--|
             </code>
     </div>
 
@@ -893,8 +944,30 @@ B|-----------------------------------------------|
     <div class="slide" id="Bon_Jovi_-_It's_my_life">
         <h2>Bon Jovi  - It's my life </h2>
         <code>
-<b>Tom:</b> D
+<b>Tom:</b> Cm
 
+C5/G  F5/C
+
+C5  Ab5  Eb5  Bb/D
+
+C5  Ab5  Bb5 ( Bb  B )  C5  Ab5
+
+Eb5  Bb/D  C5  Ab5  Bb5  ( Bb    B )  C5/G
+        </code>
+        <code>
+G|-----------------------------------------------|
+D|-----------------------------------------------|
+A|-----------------------------------------------|
+E|-----------------------------------------------|
+B|-1-1-3-4-3-1-1-1-------------------------------|
+ou
+G|-----------------------------------------------|
+D|---------------1-------------------------------|
+A|-3-3---3-1-3-----3-3---------------------------|
+E|-------------3---------1-1---1-1---------------|
+B|-----------------------------------------------|
+        </code>
+        <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
 D|-----------------------------------------------|
@@ -932,10 +1005,13 @@ B|-----------------------------|
 
     function scroll(element) {
         var ele = document.getElementById(element);
+        console.log('rolando pá', ele);
+        ele.focus();
         window.scrollTo(ele.offsetLeft, ele.offsetTop);
     }
 
     document.querySelector('.btn.back').onclick = () => {
+        console.log('rolando pá cima');
         scroll('Repertorio');
     }
     console.log('loaded');
@@ -946,9 +1022,9 @@ B|-----------------------------|
     var requestMethod = Body.requestFullScreen || Body.webkitRequestFullScreen 
     || Body.mozRequestFullScreen || Body.msRequestFullScreen;
 
-    if (requestMethod) {
-        requestMethod.call(Body);
-    }
+    // if (requestMethod) {
+    //     requestMethod.call(Body);
+    // }
 })()
 </script>
 </html>
