--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <link rel="stylesheet" href="reveal.js/css/reveal.min.css">
+  <link rel="stylesheet" href="reveal.js/css/reveal.css">
   <link rel="stylesheet" href="css/john.css" id="theme">
 </head>
 
@@ -28,7 +28,6 @@
         <section id="Repertorio">
           <h1>Repertório Rebob.INI</h1>
           <br />
-          <p>
           <nav>
             <a href="#Jota_Quest_-_Do_Seu_Lado">Jota Quest - Do Seu Lado</a>
             <a href="#Skank_-_Vou_Deixar">Skank - Vou Deixar</a>
@@ -57,7 +56,6 @@
             <a href="#Bon_Jovi_-_Its_my_life">Bon Jovi - It's my life</a>
             <a href="#ACDC_-_Highway_to_hell">AC/DC - Highway to hell</a>
           </nav>
-          </p>
         </section>
 
         <section id="Jota_Quest_-_Do_Seu_Lado">
@@ -96,7 +94,7 @@ B|---------------------(3)------------|</code>
 
 
         <section id="Skank_-_Vou_Deixar">
-          <h2><a href="#/Repertório">#</a> Skank - Vou Deixar </h2>
+          <h2><a href="#">#</a> Skank - Vou Deixar </h2>
           <code>
 <b>Intro:</b> A5 <b>(slide p/ 12ª)</b>
 
@@ -127,6 +125,29 @@ E|-----5-7---7-----5-7---7-5-5--0-2-3--2-5-5--0-2-3-2-|</code>
 
         <section id="Los_Hermanos_-_Ana_Julia">
           <h2><a href="#">#</a> Los Hermanos - Ana Julia </h2>
+          <code>
+Eb  Cm  Eb  Cm
+
+<b>1ª parte:</b>
+  Eb  Cm   Gm
+  Ab  Bb   Eb  Cm …
+
+<b>Pré-Refrão</b>:
+  Ab  Bb  Cm
+  Gm  Ab  Bb
+
+<b>Refrão:</b> Eb  Ab  Bb
+
+<b>Solo:</b>
+  Eb  Ab  Bb  Eb  Ab  Bb
+  Cm  Gm  A  E
+  Cm  Gm  A  B
+
+<b>Parte chata do finalzinho que fica lento</b>
+Cm  Gm  Ab  Eb
+  …
+   Ab   Bb
+          </code>
           <code>
 G|------------5---------------------------------|
 D|----------5---5-------------------------------| 3x
@@ -317,11 +338,11 @@ A  F#m  E
 A  E  F#m  D
 
 <b>Campo harmônico:</b>
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-----------------------------------------------|</code>
+G|--------------------------------------|
+D|--------------------------------------|
+A|--------------------------------------|
+E|--------------------------------------|
+B|--------------------------------------|</code>
         </section>
 
 
@@ -460,25 +481,11 @@ E|---------------------------------|</code>
 B  E
 F# E    </code>
           <code>
-E|-11--11--11--11--11--11--11--11--12--12--12--12--1--|
-B|---12--12--12--12--12--12--12--12--12--12--12--12---|
-G|----------------------------------------------------|
-D|----------------------------------------------------|
-A|----------------------------------------------------|
-E|----------------------------------------------------|
-
-E|2--12--12--12---|
-B|-12--12--12--12-|
-G|----------------|
-D|----------------|
-A|----------------|
-E|----------------|
-
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-----------------------------------------------|</code>
+G|--------------------------------------|
+D|--------------------------------------|
+A|--------------------------------------|
+E|--------------------------------------|
+B|--------------------------------------|</code>
         </section>
 
 
@@ -489,73 +496,48 @@ B|-----------------------------------------------|</code>
 <b>Tom:</b> Cm
 
 <b>Intro:</b>
-Bb (Riff 1)  Cm7  (Riff 2)
-Fm7(9)  (Riff 3)  Db  (Riff 4)
-
+G|---------------------------------------|
+D|------------------5-4-3----------------|
+A|-------------5-3--------3--------------|
+E|-4-6-7---7-7--------------6-5----------|
+B|---------------------------------------|
+</code>
+          <code>
 <b>Refrão:</b>
-
-Cm7  Fm7  Bb7  (Riff 5)
-Cm7 F7 Ab (Riff 7)
-
-( Bb  (Riff 1)  Cm7  (Riff 2) )
-( Fm7(9)  (Riff 3)    Db  (Riff 8) )
+G|---------------------------------------|
+D|-------3----------------1--11-1--------|
+A|--3-3-3-----------1-1-1----------------|
+E|------(1)--1--1-1----------------------|
+B|--------------------------------4---3--|
 </code>
           <code>
-G|-----------------------------------------------|
-D|------------------5-4-3------------------------|
-A|-------------5-3--------3----------------------|
-E|-4-6-7---7-7--------------6-5------------------|
-B|-----------------------------------------------|
+<b>Ponte</b>
+G|---------------------------------------|
+D|---------------------------------------|
+A|-------6-6--2--2--3-3----6-6-----------|
+E|-1-1-1---------------------------------|
+B|---------------------------------------|
 
-G|-----------------------------------------------|
-D|-------3----------------1--11-1----------------|
-A|--3-3-3-----------1-1-1------------------------|
-E|------(1)--1--1-1------------------------------|
-B|--------------------------------4---3----------|
-
-G|--------------------------------------------|
-D|--------------------------------------------|
-A|---------------10-9-8--8-6-5----------------|
-E|-4-6-7--7-10-8------------------------------|
-B|--------------------------------------------|</code>
-          <code>
-G|--------------------------------------------|
-D|--------------------------------------------|
-A|---------------10-9-8--8-6-5----------------|
-E|-4-6-7—7-10-8----------------5/10-----------|
-B|-----------------------------------12\------|
-
-G|--------------------------------------------|
-D|--------------------------------------------|
-A|-----------10-9-8--8-6-5--------------------|
-E|-7--7-10-8----------------------------------|
-B|--------------------------3-3---------------|
+G|---------------------------------------|
+D|---------------------------------------|
+A|-------6-6-----------------------------|
+E|-1-1-1---------------------------------|
+B|------------3-3--3--3-3-3-3-3----------|
 </code>
           <code>
-G|--------------------------------------------|
-D|--------------------------------------------|
-A|--------------------------------------------|
-E|-1--1-1-----------------------1--1-1--------|
-B|---------4--4-4-0--0-4-1--1-4--------4--4-4-|
-
-G|--------------------------------------------|
-D|--------------------------------------------|
-A|--------------------------------------------|
-E|-3--3-3--3-3-3-3--3-3-3-3-------------------|
-B|--------------------------------------------|
+G|---------------------------------------|
+D|---------------------------------------|
+A|---------------------------------------|
+E|---------------------------------------|
+B|---------------------------------------|
 </code>
           <code>
-G|--------------------------------------------|
-D|--------------------------------------------|
-A|-------8-------6-6-------6------------6-7---|
-E|-8-8-8---6-6-6-----8-8-8---8-7-6--6-6-------|
-B|--------------------------------------------|
-
-G|--------------------------------------------|
-D|--------------------------------------------|
-A|-------8-------6-6--3-3-3---------------2-2-|
-E|-8-8-8---6-6-6------------1--1-3-4-4-4------|
-B|--------------------------------------------|</code>
+G|---------------------------------------|
+D|---------------------------------------|
+A|---------------------------------------|
+E|---------------------------------------|
+B|---------------------------------------|
+</code>
         </section>
 
 
@@ -572,11 +554,11 @@ A  B  E
 
 <b>Solo:</b> E  A  Em</code>
           <code>
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-----------------------------------------------|</code>
+G|--------------------------------------|
+D|--------------------------------------|
+A|--------------------------------------|
+E|--------------------------------------|
+B|--------------------------------------|</code>
         </section>
 
 
@@ -599,21 +581,21 @@ E  C#m  A
 
 E</code>
           <code>
-G|----------------------------------------------|
-D|----------------------------------------------|
-A|------------------------11-11--7-7--7-7--7-7--|
-E|-9-9\--3/9-9--9-9--9-9------------------------|
+G|--------------------------------------|
+D|--------------------------------------|
+A|-------------------11--7-7--7-7--7-7--|
+E|-9-9\--3/9-9--9-9---------------------|
 
-G|----------------------------------------------|
-D|----------------------------------------------|
-A|-7-7--11-11----------------------11-11--------|
-E|-------------9-9--9-9--9-9--9-9---------------|
+G|--------------------------------------|
+D|--------------------------------------|
+A|-7-7--11-11--------------11-11--------|
+E|-------------9-9--9-9-9---------------|
 
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-----------------------------------------------|</code>
+G|--------------------------------------|
+D|--------------------------------------|
+A|--------------------------------------|
+E|--------------------------------------|
+B|--------------------------------------|</code>
         </section>
 
 
@@ -635,11 +617,11 @@ A|-----------------------------15-12--|
 E|------------------------------------|</code>
           <code>
 <b>Campo harmônico:</b>
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-----------------------------------------------|</code>
+G|--------------------------------------|
+D|--------------------------------------|
+A|--------------------------------------|
+E|--------------------------------------|
+B|--------------------------------------|</code>
         </section>
 
 
@@ -648,10 +630,10 @@ B|-----------------------------------------------|</code>
           <h2><a href="#">#</a> De Falla - Popozuda </h2>
           <code>
 <b>Tom:</b>
-G|----------------------------------------------|
-D|-----------------------------------------7----|
-A|------------7-------------------7---5--8------|
-E|--------5-8-----5-------8---------------------|</code>
+G|------------------------------------|
+D|----------------------------------7-|
+A|-----7-------------------7---5--8---|
+E|-5-8-----5-------8------------------|</code>
         </section>
 
 
@@ -668,11 +650,11 @@ Intro: Em  B
 Em   Bm    Am    Em        B7</code>
           <code>
 <b>Campo harmônico:</b>
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-----------------------------------------------|</code>
+G|--------------------------------------|
+D|--------------------------------------|
+A|--------------------------------------|
+E|--------------------------------------|
+B|--------------------------------------|</code>
         </section>
 
 
@@ -682,11 +664,11 @@ B|-----------------------------------------------|</code>
           <code>
 <b>Tom:</b>
 <b>Campo harmônico:</b>
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-----------------------------------------------|</code>
+G|--------------------------------------|
+D|--------------------------------------|
+A|--------------------------------------|
+E|--------------------------------------|
+B|--------------------------------------|</code>
         </section>
 
 
@@ -696,11 +678,11 @@ B|-----------------------------------------------|</code>
           <code>
 <b>Tom:</b>
 <b>Campo harmônico:</b>
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-----------------------------------------------|</code>
+G|--------------------------------------|
+D|--------------------------------------|
+A|--------------------------------------|
+E|--------------------------------------|
+B|--------------------------------------|</code>
         </section>
 
 
@@ -758,32 +740,32 @@ E|4~------------4--------6--4\--|</code>
           <code>
 <b>Tom:</b> Cm
 
-C5/G  F5/C
+C5/G  F5/C  <b>C5  Ab5  Eb5  Bb/D</b>
 
-C5  Ab5  Eb5  Bb/D
+C5  Ab5  Bb5 <b>Bb  B</b>  C5  Ab5
 
-C5  Ab5  Bb5 ( Bb  B )  C5  Ab5
+Eb5  Bb/D  C5  Ab5  Bb5
 
-Eb5  Bb/D  C5  Ab5  Bb5  ( Bb    B )  C5/G</code>
+<b>Bb B</b> C5/G</code>
           <code>
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-1-1-3-4-3-1-1-1-------------------------------|
+G|---------------------------------|
+D|---------------------------------|
+A|---------------------------------|
+E|---------------------------------|
+B|-1-1-3-4-3-1-1-1-----------------|
 ou
-G|-----------------------------------------------|
-D|---------------1-------------------------------|
-A|-3-3---3-1-3-----3-3---------------------------|
-E|-------------3---------1-1---1-1---------------|
-B|-----------------------------------------------|</code>
+G|---------------------------------|
+D|---------------1-----------------|
+A|-3-3---3-1-3-----3-3-------------|
+E|-------------3---------1-1---1-1-|
+B|---------------------------------|</code>
           <code>
 <b>Campo harmônico:</b>
-G|-----------------------------------------------|
-D|-----------------------------------------------|
-A|-----------------------------------------------|
-E|-----------------------------------------------|
-B|-----------------------------------------------|</code>
+G|---------------------------------|
+D|---------------------------------|
+A|---------------------------------|
+E|---------------------------------|
+B|---------------------------------|</code>
         </section>
 
 
@@ -814,6 +796,17 @@ B|-----------------------------|</code>
     // Full list of configuration options available here:
     // https://github.com/hakimel/reveal.js#configuration
     Reveal.initialize({
+      width: '100%',
+      height: '100%',
+
+      // Factor of the display size that should remain empty around
+      // the content
+      margin: 0.04,
+
+      // Bounds for smallest/largest possible scale to apply to content
+      minScale: 0.2,
+      maxScale: 1.0,
+
       controls: true,
       progress: true,
       history: true,
@@ -824,11 +817,11 @@ B|-----------------------------|</code>
 
       // Optional libraries used to extend on reveal.js
       dependencies: [
-        { src: 'reveal.js/lib/js/classList.js', condition: function () { return !document.body.classList; } },
-        { src: 'reveal.js/plugin/markdown/marked.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
-        { src: 'reveal.js/plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
-        { src: 'reveal.js/plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } },
-        { src: 'reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function () { return !!document.body.classList; } },
+        // { src: 'reveal.js/lib/js/classList.js', condition: function () { return !document.body.classList; } },
+        // { src: 'reveal.js/plugin/markdown/marked.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+        // { src: 'reveal.js/plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+        // { src: 'reveal.js/plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } },
+        // { src: 'reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function () { return !!document.body.classList; } },
         { src: 'reveal.js/plugin/notes/notes.js', async: true, condition: function () { return !!document.body.classList; } }
         // { src: 'reveal.js/plugin/leap/leap.js', async: true }
         // { src: 'reveal.js/plugin/search/search.js', async: true, condition: function() { return !!document.body.classList; } }
