--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@ Eb  Cm  Eb  Cm
 
 <b>Solo:</b>
   Eb  Ab  Bb  Eb  Ab  Bb
-  Cm  Gm  A  E
-  Cm  Gm  A  B
+  Cm  Gm  Ab  E
+  Cm  Gm  Ab  Bb
 
 <b>Parte chata do finalzinho que fica lento</b>
 Cm  Gm  Ab  Eb
@@ -455,7 +455,9 @@ Eb5  Ab5
 Bb7  Ab5  Eb5
 
 <b>Refrão:</b>
-Eb  Cm  </code>
+Eb  Cm
+
+Ab Bb</code>
 
           <code>
 <b>Eb7</b>
